# EVE

./: .gitignore  debug_eve_timing.py  pyproject.toml
Experiments/: debug_timing.ipynb  exp1_internal_behaviour.ipynb  exp1_internal_behaviour_v2.ipynb  exp2_race_cifar10.ipynb  exp3_diagnostics.ipynb  exp4_race_to_80f1.ipynb
Paper/: EVE_proposal_draft1.tex  EVE_proposal_simpler_draft.tex  Eve_draft1.tex
benchmarks/: benchmark_cifar10_cnn_vit.ipynb  benchmark_tabular_mlp.ipynb  benchmark_text_lm_lstm.ipynb  eve_benchmark.ipynb
eve_optimizer/: __init__.py  _foreach.py  _probing.py  diagnostics.py  eve.py  schedulers.py
tests/: test_eve.py
