[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "eve-optimizer"
version = "0.1.0"
description = "EVE: Evolutionary Virtual Exploration — adaptive optimization via offspring direction selection with probe-based fitness evaluation."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["eve_optimizer*"]
